<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tictactoebg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nextPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/next_player_name"
            android:textColor="#fff"
            android:textStyle="bold" />
    </com.facebook.shimmer.ShimmerFrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <hu.ait.tictactoe.view.TicTacToeView
            android:id="@+id/ticTacToeView"
            android:layout_width="250dp"
            android:layout_height="250dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/clear" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/elapsedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/cross_elapsed_time"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!--    Chronometer for elapsed time-->
        <Chronometer
            android:id="@+id/crossChronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/elapsed_time"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/circleTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/circle_elapsed_time"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold"

            />

        <!--    Chronometer for elapsed time-->
        <Chronometer
            android:id="@+id/circleChronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/elapsed_time"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>